# BumbleAIBridge

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
docs/: index.md  models.md  tests.md
examples/advanced_example/: CMakeLists.txt  main.cpp
examples/basic_example/: CMakeLists.txt  main.cpp
include/BumbleAIBridge/: AIClient.h  AIConfig.h  AIFactory.h  BumbleAIBridge.h  OperationResult.h
src/: AIBridge.cpp  AIClient.cpp  AIClient_p.h  AIFactory.cpp  BumbleAIBridge.cpp  CMakeLists.txt
src/internal/: LLMOutputProcessor.cpp  LLMOutputProcessor.h  LLMOutputProcessor_p.h  OllamaClient.cpp  OllamaClient.h  OpenAIClient.cpp  OpenAIClient.h  helper.cpp
tests/: BumbleAIBridgeTest.cpp  BumbleAIBridgeTest.h  CMakeLists.txt  main.cpp
